<resources>
    <string name="app_name">FirstApp</string>
    <string name="show_toast">Show Toast</string>
    <string name="button">Button</string>
    <string name="view_offer">View Offer</string>
    <string name="submit">Submit</string>
    <string name="enter_your_code">Enter your code</string>
    <string name="show_output">Show Output</string>
    <string name="provide_input">Provide Input</string>
    <string name="text_view_and_edit_text">Text View And Edit Text</string>
    <string name="textview">TextView</string>
</resources>